...
                        uiList.forEach {
                            signedProductCodes.add(it.KBarCode)
                        }
                        uiList = mutableListOf()
                        uiList = refillProducts
                    }) {
                        Text(text = "انتخاب همه")
                    }
                    Button(onClick = {
                        openClearDialog = true
                    }) {
                        Text(text = "پاک کردن")
                    }
                    Button(onClick = {
                        signedProductCodes.clear()
                        selectMode = false
                        uiList = mutableListOf()
                        uiList = refillProducts
                    }) {
                        Text(text = "بازگشت")
                    }
                }
            }
        }
    }

...
                }
            }

            LazyColumn(
                modifier = Modifier
                    .padding(top = 8.dp, bottom = 56.dp)
                    .testTag("RefillActivityLazyColumn")
            ) {

                items(uiList.size) { i ->
                    LazyColumnItem(i)
                }
            }
...
                            }
                        }
                        uiList = mutableListOf()
                        uiList = refillProducts
                    },
                )
                .testTag("refillItems"),
        ) {

            if (uiList[i].KBarCode in signedProductCodes) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_baseline_check_circle_24),
                    tint = doneColor,
...
                        Button(onClick = {
                            openClearDialog = false
                            clear()
                            selectMode = false

                        }, modifier = Modifier.padding(top = 10.dp, end = 20.dp)) {
                            Text(text = "بله")
                        }
                        Button(
                            onClick = { openClearDialog = false },
                            modifier = Modifier.padding(top = 10.dp)
                        ) {
                            Text(text = "خیر")
...
